--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
   implementation 'org.clojure:core.async:0.6.532'
   devImplementation 'org.clojure:java.classpath'
   compile 'cljs-http:cljs-http:0.1.46'
+  compile 'prismatic:schema:1.1.12'
 }
 
 clojurescript {
