--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
   devImplementation 'org.clojure:java.classpath'
   compile 'cljs-http:cljs-http:0.1.46'
   compile 'prismatic:schema:1.1.12'
+  compile 'orchestra:orchestra:2019.02.06-1'
+  compile 'metosin:spec-tools:0.10.1'
 }
 
 clojurescript {
